Fix T43739: bad documentation for bmesh py `intersect_face_point()`

Previous text could make think this func was checking whether a point was
inside and on the face, while it actually checks whether the projection
of that point onto the face is inside its boundary...